--- a/Poem/poem.css
+++ b/Poem/poem.css
@@ -1,62 +1,90 @@
 body {
-	padding: 0; 
-	margin: 0;
-	background-color:gray;
+	background-color:white;
 	cursor:default;
 }
 
-.right {
-	color:white;
+a {
+	color:black;
 	text-decoration:none;
 	font-size:100px;
 	bottom:0;
-	right:100;
+	position:absolute;
+	margin-bottom:10%;
+	font-weight:bold;
+	font-family: 'Roboto',sans-serif;
+}
+
+.right {
+	color:black;
+	text-decoration:none;
+	font-size:100px;
+	bottom:0;
+	right:100px;
 	text-align:right;
 	position:absolute;
-	margin-bottom:100px;
+	margin-bottom:10%;
 	font-weight:bold;
-	font-family:"DINPro";
+	font-family: 'Roboto',sans-serif;
 }
 
 .left {
-    color:white;
+    color:black;
 	text-decoration:none;
 	font-size:100px;
 	bottom:0;
-	left:100;
+	left:100px;
 	text-align:left;
 	position:absolute;
-	margin-bottom:100px;
+	margin-bottom:10%;
 	font-weight:bold;
-	font-family:"DINPro";
-}
-
-.middle {
-    color:white;
-	text-decoration:none;
-	font-size:100px;
-	bottom:0;
-	text-align:center;
-	position:absolute;
-	margin-bottom:50px;
-	margin-left:50%;
-	margin-right:50%;
-	font-weight:bold;
-	font-family:"DINPro";
+	font-family: 'Roboto',sans-serif;
 }
 
 a:hover {
-	color:gray;
+	color:white;
+}
+
+
+#right {
+    display:block;
+    float:right;
+    margin-right:100px;
+	background-color: white;
+	margin-top:15%;
+	position:right;
+	size:width/2;
+}
+
+#left {
+    display:block;
+    float:left;
+    margin-left:100px;
+	background-color: white;
+	margin-top:15%;
+	position:left;
+	size:width/2;
+}
+
+#container {
+    position:CENTER;
+    top:0;
 }
 
 div {
-    margin-left:100px;
-    margin-top:100px;
-    margin-bottom:300px;
-    text-align:left(30);
-    font-family:"DINPro";
-    font-size:50px;
-    color:white;
+    margin-top:;
+    margin-bottom:10px;
+    font-family:'Roboto',sans-serif;
+    font-size:20px;
+    color:black;
     font-weight:bold;
     line-height:120%;
+}
+
+p {
+	font-family:'Roboto',sans-serif;
+	font-size: 10px;
+	position:absolute;
+	bottom:0;
+	margin-left:100;
+	margin-right:100;
 }
