--- a/mystyles.css
+++ b/mystyles.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
     color: gray;
-    font-family: "DINPro";
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 100px;
     text-align: center;
     font-style: italic;
